# egosmith

./: .gitignore  .gitmodules  README.md  demo.py  pyproject.toml  requirements.txt
configs/: README.md  dataset_pipeline_single_video.example.yaml
docs/: annotation.md  dataset_format.md  dataset_pipeline.md  hawor_provenance.md  inputs.md  install.md  repo_map.md  running_at_scale.md
patches/chumpy/: setup.py.patch
scripts/: README.md  __init__.py  batch_infer.py  batch_worker.py  extract_frames.py  run_dataset_pipeline.py
scripts/inspection/: analyze_run.py  check_motion_stage_outputs.py  overlay_hand_cam.py  validate_pipeline_run.py
scripts/setup/: download_weights.sh  fetch_chumpy.sh  fetch_hawor_base.sh  provision_worktree.sh  setup_env.sh  validate_setup.sh
src/lib/annotation/: __init__.py  api_annotation.py  api_annotation_with_clip.py
src/lib/clip/: clip_config.py  heuristic_clip_config.yaml  heuristic_video_clipper.py  run_heuristic_video_clipper.sh
src/lib/pipeline/: __init__.py
src/lib/pipeline/batch/: __init__.py  cli.py  config.py  events.py  scheduler.py  state.py  worker_pool.py
src/lib/pipeline/clips/: annotation_protocol.py  clip_manifest.py  video_clipping.py
src/lib/pipeline/datasets/: __init__.py  base.py  buildai.py  descriptors.py  flat_shard.py  fpha_tar.py  hot3d_wds.py  image_sequence.py  legacy_buildai.py  single_video.py  video_folder.py
src/lib/pipeline/exporters/: __init__.py  camera_features.py  episode_cache.py  lowdim_assembly.py  manifest_vla.py  mano_codec.py  mano_features.py  shard_io.py  webdataset.py  webdataset_annotation.py  webdataset_discovery.py  webdataset_features.py  webdataset_geometry.py  webdataset_rewriter.py  webdataset_workers.py  webdataset_writer.py
src/lib/pipeline/filtering/: __init__.py  manifest_filter.py
src/lib/pipeline/hands/: detect_track_batched.py  est_scale_batch.py  fpha_skeleton.py  hand_depth_align.py  hand_metric_anchor.py  hand_shape_stabilize.py  hawor_inference.py  (+3 more)
src/lib/stage_runners/: __init__.py  detect_track_video.py  hawor_slam.py  hawor_video.py  run_any4d_depth.py  run_dpvo_cli.py
src/lib/utils/: mano_numpy.py
src/pypose/: __init__.py
(+65 files in other folders)
